# ansible

./: .ansible-lint  .coverage  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Create Raspbian Image.md  Makefile  README.md  ansible.cfg  create_test_env.sh  delete_test_env.sh  inventory.yaml  pyproject.toml  pytest.ini  rolling-updates.yaml  site-variables.yaml  site.yaml  test-inventory.yaml
.github/workflows/: CICD.yml  codeql-analysis.yml  main.yml  update-actions.yml
bootstrap/: Intel Create Boot Image.md  README.md  all_nodes_wait.yaml  intel_init.yaml  main.yaml  rpi_init.yaml  test-bootstrap.yaml  ubuntu_init.yaml
bootstrap/rpi4/: README.MD  create_nas_boot_img.sh  one_time_setup.sh
kubernetes/: README.md  create_all_master_luns.sh  create_new_pxe_client.sh  full_rebuild.yaml  reset_environment.yaml  turn_cluster_off.yaml  turn_cluster_on.yaml  validate_boot_lun_masters.yaml
kubernetes/utilities/: create_lun.py  delete_lun.py  helper.py  restart_iscsi.py
kubernetes/utilities/v2/: conftest.py  create_lun.py  delete_lun.py  logging.yaml  models.py  test_create_lun.py  test_delete_lun.py  test_models.py
local_mac/: README.md  config.yaml
local_windows/: README.md  p10k.zsh  windows.yaml  zshrc
roles/arillso.sshd/: .travis.yml  CHANGELOG.md  README.md
roles/arillso.sshd/defaults/: main.yml
roles/arillso.sshd/handlers/: main.yml
roles/arillso.sshd/meta/: .galaxy_install_info  main.yml
roles/arillso.sshd/tasks/: main.yml
roles/arillso.sshd/vars/: Debian.yml  FreeBSD.yml  Oracle Linux.yml  defaults.yml
roles/arq/tasks/: main.yaml
roles/blanc/tasks/: main.yaml
roles/common/files/: auto.master  auto.shared  gitconfig  msmtprc  non_root_profile
roles/common/handlers/: main.yaml
roles/common/tasks/: bionic.yaml  clearos.yaml  debian.yaml  gen_rundeck_inventory.yaml  main.yaml  raspbian.yaml
roles/common/templates/: collectd.conf  collectd.conf.bionic  ntp-timeserver.conf  ntp.conf  rundeck_inventory.yaml
roles/grigio/tasks/: main.yaml
roles/k8s-common/tasks/: main.yaml
roles/k8s-master-first-kubeadmin-init/files/: dashboard-node-selector.yaml  freenas-class.yaml  freenas-deployment.yaml  freenas-rbac.yaml  test-claim.yaml  test-pod.yaml
roles/k8s-master-first-kubeadmin-init/tasks/: main.yaml
roles/k8s-master-first-kubeadmin-init/templates/: freenas-secret.yaml  metallb-config.yaml
roles/k8s-master-kubeadmin-join/tasks/: main.yaml
roles/k8s-master-prep/handlers/: main.yaml
roles/k8s-master-prep/tasks/: main.yaml
roles/sansible.ssmtp/: README.md  requirements.yml
roles/sansible.ssmtp.old/: .travis.yml  README.md
(+96 files in other folders)
