[tool.black]
py36 = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist

  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
)/
'''

[tool.poetry]
name = "snider_ansible"
version = "0.1.0"
description = ""
authors = ["David Snider <david@davidsnider.org>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.7.3"
ansible = "^10.0.1"
hvac = "^2.2.0"
pydantic-settings = "^2.3.1"
poetry-plugin-export = "^1.8.0"

[tool.poetry.dev-dependencies]
detect-secrets = "=1.5.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
