[tool.black]
py36 = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist

  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
)/
'''

[tool.poetry]
name = "snider_ansible"
version = "0.1.0"
description = ""
authors = ["David Snider <david@davidsnider.org>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.10.3"
ansible = "^10.6.0"
hvac = "^2.3.0"
pydantic-settings = "^2.6.1"
poetry-plugin-export = "^1.8.0"

[tool.poetry.dev-dependencies]
detect-secrets = "=1.5.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
